--- a/src/main/resources/templates/books/add.html
+++ b/src/main/resources/templates/books/add.html
@@ -91,7 +91,7 @@
                                     <input type="date" id="publishDate" name="publishDate" class="form-control" th:field="*{publishDate}">
                                     <div class="invalid-feedback">请选择有效的出版日期</div>
                                 </div>
-                            
+                            </div>
                             <div class="form-group">
                                 <label for="publisher" class="form-label">出版社</label>
                                 <input type="text" id="publisher" name="publisher" class="form-control" th:field="*{publisher}">
@@ -130,10 +130,6 @@
                                 <label for="availableCopies" class="form-label">可借数量</label>
                                 <input type="number" id="availableCopies" name="availableCopies" class="form-control" th:field="*{availableCopies}" min="0">
                             </div>
-                            
-
-                            
-
                         </div>
                     </div>
                     
